Update contact information in Index.html

--- a/Index.html
+++ b/Index.html
@@ -261,8 +261,8 @@ footer{
   <p class="section-desc">Let’s work together.</p>
 
   <div class="contact">
-    <p><strong>Email:</strong> yourname@email.com</p>
-    <p><strong>Instagram:</strong> @yourhandle</p>
+    <p><strong>Email:</strong> arsalgfx@gmail.com</p>
+    <p><strong>Twitter:</strong> @arsalgfx_</p>
     <p style="margin-top:15px;color:#aaa">
       Message me to discuss pricing, timelines, or collaborations.
     </p>
